# calculator-solver

./: CHANGELOG.md  README.md  calculator-solver.cabal
app/: Calculator.hs  Main.hs  Parser.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
